--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="start_discovery_text">start Discovery</string>
     <string name="stop_discovery_text">stop Discovery</string>
     <string name="disconnect_text">Disconnect</string>
+    <string name="start_measurement_text">Start measurement</string>
+    <string name="stop_measurement_text">Stop measurement</string>
 </resources>
